# opsalert

./: .gitignore  CLAUDE.md  pyproject.toml
opsalert/: __init__.py  _config.py  cleanup.py  delivery.py  model.py  query.py  transport.py
scripts/: install-hooks.sh
scripts/hooks/: pre-commit
tests/: test_query.py
